--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.2.1",
+    "@mantine/hooks": "^4.2.1",
+    "@mantine/next": "^4.2.1",
+    "@radix-ui/react-icons": "^1.1.0",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "serverless-mysql": "^1.5.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
